--- a/website/templates/flatpages/default.html
+++ b/website/templates/flatpages/default.html
@@ -7,7 +7,7 @@
         <h3 class="text-primary">{{ flatpage.title }}</h3>
         {% if flatpage.url == '/transferencias-presupuestarias/' %}<div class="text-center" style="margin-right: 20px;"><iframe width="700" height="415" src="https://www.youtube.com/embed/FLX6UdjOFts" frameborder="0" allowfullscreen></iframe></div>{% endif %}
         {% if flatpage.url == '/ciclo-presupuestario/' %}
-            <div class="text-center" style="margin-bottom: 20px;"><iframe width="700" height="415" src="https://www.youtube.com/embed/FLX6UdjOFts" frameborder="0" allowfullscreen></iframe></div>
+            <div class="text-center" style="margin-bottom: 20px;"><iframe width="700" height="415" src="https://www.youtube.com/watch?v=dzXfb1JXHTI&rel=0" frameborder="0" allowfullscreen></iframe></div>
             <div class="text-justify col-md-12">
             {{ flatpage.content|urlize|linebreaks }}
             </div>
