--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -279,7 +279,7 @@
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
 
                     <td class="success text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
-                    <td class="success text-right">{% if row.actualizado_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="success text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
                     <td class="success text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
                     {% if row.actualizado_asignado %}
                         <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
@@ -357,7 +357,7 @@
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
 
                     <td class="success text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
-                    <td class="success text-right">{% if row.actualizado_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="success text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|intcomma }}{% else %}0{% endif %}</td>
                     <td class="success text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
                     {% if row.actualizado_asignado %}
                         <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
