--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -9,7 +9,7 @@
 
 {% block main_content %}
 	{% descargar_excel "oim-all" %}
-    <h2 class="titular">Origen de los ingresos {% if municipio %} {{ municipio }} {% endif %}{% if year %}{{ year }}{% endif %}</h2>
+    <h2 class="titular">Origen de los ingresos {% if municipio %} {{ municipio }} {% endif %}{% if year %}{{ year }}{% else %}2015 {% endif %}</h2>
     <form method="GET">
     <select name="year">
     {% for ayear in year_list %}
@@ -131,12 +131,12 @@
             <div class="center-block center"><h2>Eficiencia en recaudación municipal</h2></div>
             <div class="col-md-6">
                     <img src="{% static 'img/oim-asignadop.png' %}" class="img-responsive margen pull-left" alt="ingreso de funcionamiento asignado" />
-                    <h3 class="titular" data-toggle="popover" title="Presupuestado" data-content="Indica el Porcentaje que Los Municipios  a nivel nacional destinaron para cubrir los ingresos de administración y prestación de los">Presupuestado</h3>
-                    <span class="cifra grande text-primary">{{ rubrosp|total_sum:'inicial_asignado'|floatformat:2|intcomma }}</span>
+                    <h3 class="titular" data-toggle="popover" title="Presupuestado" data-content="Indica el Porcentaje que Los Municipios  a nivel nacional destinaron para cubrir los ingresos de administración y prestación de los">Presupuesto inicial</h3>
+                    <span class="cifra grande text-primary">{{ rubrosp|total_sum:'inicial_asignado'|million|intcomma }}</span>
             </div>
             <div class="col-md-6">
                     <img src="{% static 'img/oim-asignadop.png' %}" class="img-responsive margen pull-left" alt="ingreso de funcionamiento asignado" />
-                    <h3>Ejecutado </h3><span class="cifra text-warning grande">{{ rubrosp|total_sum:'ejecutado'|floatformat:2|intcomma }}</span>
+                    <h3>Ejecutado </h3><span class="cifra text-warning grande">{{ rubrosp|total_sum:'ejecutado'|million|intcomma }}</span>
             </div>
             <div class="separador"></div>
             <div class="center"><a class="btn btn-success" role="button" data-toggle="collapse" href="#collapseeficiencia"  aria-expanded="false" aria-controls="collapseExample">Consultar detalles </a></div>
@@ -180,7 +180,7 @@
             {% if not municipio %}
                 <div class="col-md-6">
                 	{% descargar_excel "oim3" %}
-                    <h3> Recaudación por habitante según categoría municipal</h3>
+                    <h3> Recaudación por habitante según categoría de municios</h3>
                     <h4 class="text-info">Córdobas Corrientes</h4>
                     <table class="table table-condensed col-md-3">
                         <tr class="info"><th>Categoría de municipio</th> <th>Presupuestado</th> <th>Ejecutado</th></tr>
@@ -343,7 +343,7 @@
         <!-- /fin oim-tabla5 -->
         <!-- maribeli 20/07 oim-tabla6 -->
         {% descargar_excel "oim5" %}
-        <h3>Modificacion al presupuesto municipal del ingreso de personal permanente</h3>
+        <h3>Modificacion al presupuesto municipal del ingreso - Recaudación municipal</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
         <table class="table table-condensed">
             <tr><td></td><td></td><td colspan="4" class="success text-center"><h4>Modifcación al {{ year_data.actualizado }}</h4></td><td colspan="4" class="danger"><h4>Modificación al {{ year_data.final }}</h4></td></tr>
@@ -355,9 +355,8 @@
                 <tr>
                     <td class="pull-left">{{ row.subtipoingreso__nombre }}</td>
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-
                     <td class="success text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
-                    <td class="success text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|intcomma }}{% else %}0{% endif %}</td>
+                    <td class="success text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
                     <td class="success text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
                     {% if row.actualizado_asignado %}
                         <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
@@ -424,7 +423,7 @@
         <!--maribel 20/07 oim-tabla 7 -->
         <div class="col-md-7">
         	{% descargar_excel "oim6" %}
-            <h3>Ejecución presupuestaria del ingreso sector municipal</h3>
+            <h3>Ejecución presupuestaria del ingreso total. {% if not municipio %}Consolidado municipal {% endif %}</h3>
             <h4 class="text-info">Millones de córdobas corrientes
                 <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapsehistorico"  aria-expanded="false" aria-controls="collapsehistorico">ver gráfico</a>  
             </h4>
@@ -447,7 +446,7 @@
                     <td class="text-right">{{ row.asignado|million|intcomma }}</td>
                     <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
                     {% if row.asignado %}
-                        <td class="montos text-right">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
+                        <td class="montos text-right">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:2 }}%</td>
                     {% endif %}
                  </tr>
                 {% endfor %}
@@ -456,7 +455,7 @@
                     <td class="text-right">{{ anuales|total_sum:'asignado'|million|intcomma }}</td>
                     <td class="text-right">{{ anuales|total_sum:'ejecutado'|million|intcomma }}</td>
                     {% with total_sum_asignado=anuales|total_sum:'asignado' %}</td>
-                    <td class="montos">{{ anuales|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:1 }}%</td>
+                    <td class="montos">{{ anuales|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:2 }}%</td>
                     {% endwith %}
                 </tr>
             </table>
@@ -464,7 +463,7 @@
         <!-- /fin oimtabla7 -->
         <br clear="all" >
         	{% descargar_excel "oim7" %}
-          <h3>Ingresos por períodos</h3>
+          <h3>Ejecución Presupuestaria por fuente de ingresos. {% if not municipio %}Consolidado municipal {% endif %}</h3>
           <h4 class="text-info">Millones de c&oacute;rdoba corrientes</h4>
           <table class="table table-condensed">
             <tr class="info">
