--- a/core/templates/personal.html
+++ b/core/templates/personal.html
@@ -72,11 +72,11 @@
             <div class="col-md-4">
                 <img src="{% static 'img/gfasignado.png' %}" class="img-responsive margen pull-left" alt="Gasto de personal asignado" />
                 <h3 class="titular" data-toggle="popover" title="Presupuestado" data-content="Indica el porcentaje que los municipios  a nivel nacional destinaron para cubrir los gastos de administración y prestación de los">Presupuesto inicial</h3>
-                <span class="cifra grande text-primary">{{ asignado|intcomma }}</span>
+                <span class="cifra grande text-primary">{{ asignado|million|intcomma }}</span>
             </div>
             <div class="col-md-4">
                 <img src="{% static 'img/gf.png' %}" class="img-responsive margen pull-left" alt="Gasto de personal asignado" />
-                <h3>Ejecutado </h3><span class="cifra text-warning grande">{{ ejecutado|intcomma }}</span>
+                <h3>Ejecutado </h3><span class="cifra text-warning grande">{{ ejecutado|million|intcomma }}</span>
             </div>
             {% if municipio %}
             <div class="col-md-4">
@@ -98,15 +98,15 @@
             <tr class="info"><th>Categoría</th> <th>P. Inicial</th> <th>Ejecutado</th></tr>
             {% for row in porclasep %}
                 <tr>
-                    <td>{{ row.clasificacion }}</td>
-                    <td class="tex-center">{% if row.asignado %}{{ row.asignado|floatformat:2 }}%{% else %} 0% {% endif %}</td>
-                    <td>{% if row.ejecutado %}{{ row.ejecutado|floatformat:2 }}% {% else %} 0% {% endif %}</td>
+                    <td class="text-center">{{ row.clasificacion }}</td>
+                    <td class="text-right">{% if row.asignado %}{{ row.asignado|floatformat:2 }}%{% else %} 0% {% endif %}</td>
+                    <td class="text-right">{% if row.ejecutado %}{{ row.ejecutado|floatformat:2 }}% {% else %} 0% {% endif %}</td>
                 </tr>
             {% endfor %}
             <tr class="success">
                 <td><strong>PROMEDIO</strong></td>
-                <td><strong>{{ porclasep|total_avg:'asignado'|floatformat:1 }}%</strong></td>
-                <td><strong>{{ porclasep|total_avg:'ejecutado'|floatformat:1 }}%</strong></td>
+                <td class="text-right"><strong>{{ porclasep|total_avg:'asignado'|floatformat:1 }}%</strong></td>
+                <td class="text-right"><strong>{{ porclasep|total_avg:'ejecutado'|floatformat:1 }}%</strong></td>
             </tr>
         </table>
         <!-- /fin gftabla1 nacional-->
@@ -162,18 +162,18 @@
     {% for row in rubros %}
     <tr>
         <td>{{ row.subtipogasto__nombre }}</td>
-        <td>{{ row.asignado|million|intcomma }}</td>
-        <td>{{ row.ejecutado|million|intcomma }}</td>
+        <td class="text-right">{{ row.asignado|million|intcomma }}</td>
+        <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
         {% if row.asignado %}
-            <td>{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
+            <td class="text-right">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
         {% endif %}
     </tr>
     {% endfor %}
     <tr class="success bold">
         <td>TOTAL</td>
-        <td>{{ asignado|million|intcomma }}</td>
-        <td>{{ ejecutado|million|intcomma }}</td>
-        <td>{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%</td></tr>
+        <td class="text-right">{{ asignado|million|intcomma }}</td>
+        <td class="text-right">{{ ejecutado|million|intcomma }}</td>
+        <td class="text-right">{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%</td></tr>
     </table>
     <!-- /fin gftabla2 -->
     <h3>Gastos de personal {% if municipio %}municipal{% endif %}</h3>
@@ -196,7 +196,7 @@
     {% descargar_excel "gp2" %}
     <h3>Modificaciones al presupuesto municipal</h3>
     <h4 class="text-info">Gasto de personal - millones de córdobas
-        <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapsegraficomod1"  aria-expanded="false" aria-controls="collapseGraficomod1">Ver gráfico </a>
+        <!--a class="btn btn-success" role="button" data-toggle="collapse" href="#collapsegraficomod1"  aria-expanded="false" aria-controls="collapseGraficomod1">Ver gráfico </a-->
     </h4>
     <hr />
     <div class="collapse col-md-4" id="collapsegraficomod1">
@@ -204,26 +204,27 @@
             <div id='comparativo3' class="col-md-6"> Chart will be rendered here </div>
         </div>
     </div>
+   
     <table class="table table-condensed">
         <tr class="info"> <th>Rubros de gastos de personal</th> <th>Inicial</th> <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th></tr>
     {% for row in rubros %}
     <tr>
         <td class="pull-left">{{ row.subtipogasto__nombre }}</td>
-        <td>{{ row.asignado|million|intcomma }}</td>
-        <td>{{ row.actualizado|million|intcomma }}</td>
-        <td>{% if row.actualizado %}{{ row.actualizado|sub:row.asignado|million|intcomma }}{% else %}0{% endif %}</td>
-        <td>{{ row.ejecutado|million|intcomma }}</td>
+        <td class="text-right">{{ row.asignado|million|intcomma }}</td>
+        <td class="text-right">{{ row.actualizado|million|intcomma }}</td>
+        <td class="text-right">{% if row.actualizado %}{{ row.actualizado|sub:row.asignado|million|intcomma }}{% else %}0{% endif %}</td>
+        <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
         {% if row.actualizado %}
-        <td>{{ row.ejecutado|div:row.actualizado|mul:100|floatformat:1|intcomma }}%</td>
+        <td class="text-right">{{ row.ejecutado|div:row.actualizado|mul:100|floatformat:1|intcomma }}%</td>
         {% endif %}
     </tr>
     {% endfor %}
     <tr class="success bold">
         <td>TOTAL</td>
-        <td>{{ rubros|total_sum:'asignado'|million|intcomma }}</td>
-        <td>{{ rubros|total_sum:'actualizado'|million|intcomma }}</td>
+        <td class="text-right">{{ rubros|total_sum:'asignado'|million|intcomma }}</td>
+        <td class="text-right">{{ rubros|total_sum:'actualizado'|million|intcomma }}</td>
         {% with sum_asignado=rubros|total_sum:'asignado' %}
-        <td>
+        <td class="text-right">
         {% if rubros|total_sum:'actualizado' %}
             {{ rubros|total_sum:'actualizado'|sub:sum_asignado|million|intcomma }}
         {% else %}
@@ -231,9 +232,9 @@
         {% endif %}
         </td>
         {% endwith %}
-        <td>{{ rubros|total_sum:'ejecutado'|million|intcomma }}</td>
+        <td class="text-right">{{ rubros|total_sum:'ejecutado'|million|intcomma }}</td>
         {% with sum_actualizado=rubros|total_sum:'actualizado' %}
-        <td>
+        <td class="text-right">
         {% if sum_actualizado %}
         {{ rubros|total_sum:'ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}
         {% endif %}
@@ -254,21 +255,21 @@
     {% for row in porclase %}
     <tr>
         <td>{{ row.clasificacion }}</td>
-        <td>{% if row.asignado %} {{ row.asignado|million|intcomma }}{% else %}0 {% endif %}</td>
-        <td>{% if row.actualizado %} {{ row.actualizado|million|intcomma }}{% else %}0 {% endif %}</td>
-        <td>{% if row.actualizado %} {{ row.actualizado|sub:row.asignado }}{% else %}0 {% endif %}</td>
-        <td>{% if row.ejecutado %} {{ row.ejecutado|million|intcomma }}{% else %}0 {% endif %}</td>
+        <td class="text-right">{% if row.asignado %} {{ row.asignado|million|intcomma }}{% else %}0 {% endif %}</td>
+        <td class="text-right">{% if row.actualizado %} {{ row.actualizado|million|intcomma }}{% else %}0 {% endif %}</td>
+        <td class="text-right">{% if row.actualizado %} {{ row.actualizado|sub:row.asignado|million|intcomma }}{% else %}0 {% endif %}</td>
+        <td class="text-right">{% if row.ejecutado %} {{ row.ejecutado|million|intcomma }}{% else %}0 {% endif %}</td>
         {% if row.actualizado %}
-        <td>{{ row.ejecutado|div:row.actualizado|mul:100|floatformat:1 }}%</td>
+        <td class="text-right">{{ row.ejecutado|div:row.actualizado|mul:100|floatformat:1 }}%</td>
         {% endif %}
     </tr>
     {% endfor %}
     <tr class="success bold">
         <td>TOTAL</td>
-        <td>{{ porclase|total_sum:'asignado'|million|intcomma }}</td>
-        <td>{{ porclase|total_sum:'actualizado'|million|intcomma }}</td>
+        <td class="text-right">{{ porclase|total_sum:'asignado'|million|intcomma }}</td>
+        <td class="text-right">{{ porclase|total_sum:'actualizado'|million|intcomma }}</td>
         {% with sum_asignado=porclase|total_sum:'asignado' %}
-        <td>
+        <td class="text-right">
         {% if porclase|total_sum:'actualizado' %}
             {{ porclase|total_sum:'actualizado'|sub:sum_asignado|million|intcomma }}
         {% else %}
@@ -276,11 +277,11 @@
         {% endif %}
         </td>
         {% endwith %}
-        <td>{{ porclase|total_sum:'ejecutado'|million|intcomma }}</td>
+        <td class="text-right">{{ porclase|total_sum:'ejecutado'|million|intcomma }}</td>
         {% with sum_actualizado=porclase|total_sum:'actualizado' %}
-        <td>
+        <td class="text-right">
         {% if sum_actualizado %}
-        {{ porclase|total_sum:'ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}
+        {{ porclase|total_sum:'ejecutado'|div:sum_actualizado|mul:100|million|intcomma}}
         {% endif %}
         </td>
         {% endwith %}
@@ -303,21 +304,21 @@
             <tr>
         {% endif %}
         <td>{{ row.gasto__municipio__nombre }}</td>
-        <td>{{ row.asignado|million|intcomma }}</td>
-        <td>{{ row.actualizado|million|intcomma }}</td>
-        <td>{% if row.actualizado %} {{ row.actualizado|sub:row.actualizado|million|intcomma }}{% else %}0 {% endif %}</td>
-        <td>{{ row.ejecutado|million|intcomma }}</td>
+        <td class="text-right">{{ row.asignado|million|intcomma }}</td>
+        <td class="text-right">{{ row.actualizado|million|intcomma }}</td>
+        <td class="text-right">{% if row.actualizado %} {{ row.actualizado|sub:row.actualizado|million|intcomma }}{% else %}0 {% endif %}</td>
+        <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
         {% if row.asignado %}
-        <td>{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
+        <td class="text-right">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
         {% endif %}
     </tr>
     {% endfor %}
     <tr class="success bold">
         <td>TOTAL</td>
-        <td>{{ otros|total_sum:'asignado'|million|intcomma }}</td>
-        <td>{{ otros|total_sum:'actualizado'|million|intcomma }}</td>
+        <td class="text-right">{{ otros|total_sum:'asignado'|million|intcomma }}</td>
+        <td class="text-right">{{ otros|total_sum:'actualizado'|million|intcomma }}</td>
         {% with sum_asignado=otros|total_sum:'asignado' %}
-        <td>
+        <td class="text-right">
         {% if otros|total_sum:'actualizado' %}
             {{ otros|total_sum:'actualizado'|sub:sum_asignado|million|intcomma }}
         {% else %}
@@ -325,9 +326,9 @@
         {% endif %}
         </td>
         {% endwith %}
-        <td>{{ otros|total_sum:'ejecutado'|million|intcomma }}</td>
+        <td class="text-right">{{ otros|total_sum:'ejecutado'|million|intcomma }}</td>
         {% with sum_actualizado=otros|total_sum:'actualizado' %}
-        <td>
+        <td class="text-right">
         {% if sum_actualizado %}
         {{ otros|total_sum:'ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}
         {% endif %}
@@ -366,20 +367,20 @@
     {% for row in anuales %}
     <tr>
         <td>{{ row.gasto__anio }}</td>
-        <td>{{ row.asignado|million|intcomma }}</td>
-        <td>{{ row.ejecutado|million|intcomma }}</td>
+        <td class="text-right">{{ row.asignado|million|intcomma }}</td>
+        <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
         {% if row.asignado %}
-        <td>{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
+        <td class="text-right">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
         {% endif %}
     </tr>
     {% endfor %}
     <tr class="success bold">
         <td>TOTAL</td>
-        <td>{{ anuales|total_sum:'asignado'|million|intcomma }}</td>
-        <td>{{ anuales|total_sum:'ejecutado'|million|intcomma }}</td>
+        <td class="text-right">{{ anuales|total_sum:'asignado'|million|intcomma }}</td>
+        <td class="text-right">{{ anuales|total_sum:'ejecutado'|million|intcomma }}</td>
         {% if municipio %}
             {% with total_sum_asignado=anuales|total_sum:'asignado' %}</td>
-            <td>{{ anuales|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:1 }}%</td>
+            <td class="text-right">{{ anuales|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:1 }}%</td>
             {% endwith %}
         {% endif %}
     </tr>
