--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -40,6 +40,16 @@
             });
         });
     </script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-68619423-1', 'auto');
+    ga('send', 'pageview');
+
+    </script>
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -69,7 +79,7 @@
                     <li class="divider"></li>
                     <li><a href="{%url 'gastos_funcion'%}">Gastos de funcionamiento</a></li>
                     <li><a href="{%url 'gastos_personal'%}">Gastos de personal</a></li>
-                    <li><a href="{%url 'autonomia_gastos'%}">Autonomía para asumir gastos operativos</a></li>
+                    <li><a href="{%url 'autonomia_gastos'%}">Dependencia para asumir gastos corrientes</a></li>
                     <li><a href="{%url 'ahorro_corriente'%}">Ahorro corriente para inversiones</a></li>
                     <li><a href="{%url 'ejecucion_presupuesto'%}">Ejecuci&oacute;n del presupuesto</a></li>
                     <li><a href="{%url 'inversion_categoria'%}">Inversiones</a></li>
