--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -180,7 +180,7 @@
             {% if not municipio %}
                 <div class="col-md-6">
                 	{% descargar_excel "oim3" %}
-                    <h3> Recaudación por habitante según categoría de municios</h3>
+                    <h3> Recaudación por habitante según categoría de municipios</h3>
                     <h4 class="text-info">Córdobas Corrientes</h4>
                     <table class="table table-condensed col-md-3">
                         <tr class="info"><th>Categoría de municipio</th> <th>Presupuestado</th> <th>Ejecutado</th></tr>
@@ -259,13 +259,13 @@
                 <td></td>
                 <td></td>
                 <td colspan="4" class="success text-center">
-                    <h4>Modifcación intermedia 
-                        <a href="#" data-toggle="tooltip" data-original-title="Modifcación al {{ year_data.actualizado }}" class="link-info">*</a>
+                    <h4>Modificación intermedia 
+                        <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.actualizado }}" class="link-info">*</a>
                     </h4>
                 </td>
                 <td colspan="4" class="danger text-center">
                     <h4>Modificación al cierre
-                        <a href="#" data-toggle="tooltip" data-original-title="Modifcación al {{ year_data.final }}" class="link-info">*</a>
+                        <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.final }}" class="link-info">*</a>
                     </h4>
                 </td>
             </tr>
@@ -346,7 +346,7 @@
         <h3>Modificacion al presupuesto municipal del ingreso - Recaudación municipal</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
         <table class="table table-condensed">
-            <tr><td></td><td></td><td colspan="4" class="success text-center"><h4>Modifcación al {{ year_data.actualizado }}</h4></td><td colspan="4" class="danger"><h4>Modificación al {{ year_data.final }}</h4></td></tr>
+            <tr><td></td><td></td><td colspan="4" class="success text-center"><h4>Modificación al {{ year_data.actualizado }}</h4></td><td colspan="4" class="danger"><h4>Modificación al {{ year_data.final }}</h4></td></tr>
             <tr class="info"> <th>Rubros de ingresos</th> <th>Inicial</th> 
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
