--- a/core/templates/ep.html
+++ b/core/templates/ep.html
@@ -313,6 +313,6 @@ Ejecución presupuestaria municipal {{ municipio }}
         </div>
         <!-- /fin acitabla7 -->
         <br clear="all" >
-        <div id='chart' class="col-md-10"> Chart will be rendered here </div>
+        <div id='none' class="col-md-10"> </div>
     </div>
 {% endblock %}
