--- a/core/templates/personal.html
+++ b/core/templates/personal.html
@@ -403,7 +403,7 @@
            </h4>
         </td>
       </tr>
-      <tr class="info"> <th>Categoria de Municipio</th> <th>Inicial</th> 
+      <tr class="info"> <th>Municipio</th> <th>Inicial</th> 
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-          title="Ejecutado/Actualizado" class="link-info">%</a></th>
                 <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-          title="Ejecutado/Actualizado" class="link-info">%</a></th>
       </tr>
